# steam-online-fix-launcher

./: .gitignore  BUILD_README.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_RU.md  README.md  README_GTK_WSL.md  README_RU.md  cartridges.doap  conventions.md  flake.nix  idea.md  launcher.cpp  meson.build  meson.build.backup  meson_options.txt  python3-modules.json  run-devel.bash  setup_workspace.sh  sofl.doap  steam.cpp  tasklist.md  test_gamedata_fix.py
cartridges/: application_delegate.py  cartridges.in  details_dialog.py  game.py  game_cover.py  main.py  preferences.py  shared.py.in  shared.pyi  window.py
data/: meson.build  org.badkiko.sofl.Devel.metainfo.xml  org.badkiko.sofl.desktop.in  org.badkiko.sofl.gschema.xml.in  org.badkiko.sofl.metainfo.xml.in  sofl.gresource.xml.in
docs/: README_EN.md  README_RU.md  RELEASE_WORKFLOW.md  game_id.json.md  index.md
packaging/: README.md
po/: POTFILES  ar.po  be.po  ca.po  cartridges.pot  cs.po  de.po  el.po  en_GB.po  es.po  fa.po  fi.po  fr.po  hi.po  hr.po  hu.po  ia.po  ie.po  it.po  ja.po  ko.po  meson.build  nb_NO.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sofl.pot  sv.po  ta.po  te.po  tr.po  uk.po  zh_Hans.po
scripts/: README.md  build_all.sh  dev.sh  get_version.sh  run-devel.bash  update_version.sh
search-provider/: cartridges-search-provider.in  meson.build  org.badkiko.sofl.SearchProvider.ini  org.badkiko.sofl.SearchProvider.service.in  sofl-search-provider.in
sofl/: __init__.py  application_delegate.py  details_dialog.py  game.py  game_cover.py  game_data.py  main.py  (+10 more)
(+127 files in other folders)
